--- a/.github/workflows/horror-heartbeat.yml
+++ b/.github/workflows/horror-heartbeat.yml
@@ -4,7 +4,9 @@ on:
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
-
+  push:
+    branches: [main]
+    
 permissions:
   contents: write
 
