--- a/.github/workflows/heartbeat-grid.yml
+++ b/.github/workflows/heartbeat-grid.yml
@@ -32,3 +32,7 @@ jobs:
           publish_dir: ./dist
           publish_branch: heartbeat-grid
           force_orphan: true
+          user_name: "github-actions[bot]"
+          user_email: "github-actions[bot]@users.noreply.github.com"
+          commit_message: "Update GRID heartbeat [skip ci]"
+    
