--- a/.github/workflows/heartbeat-grid.yml
+++ b/.github/workflows/heartbeat-grid.yml
@@ -1,8 +1,11 @@
 name: Heartbeat Contribution Grid
 
 on:
-  schedule: [ { cron: "0 0 * * *" } ]
+  schedule:
+    - cron: "0 0 * * *"
   workflow_dispatch:
+  push:
+    branches: [main]
 
 permissions:
   contents: write
