--- a/.github/workflows/heartbeat-grid-DraculaBiopunk.yml
+++ b/.github/workflows/heartbeat-grid-DraculaBiopunk.yml
@@ -2,8 +2,10 @@ name: Heartbeat Contribution Grid (Dracula Biopunk)
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # run daily at UTC midnight (adjust if desired)
+    - cron: "0 0 * * *"
   workflow_dispatch:
+  push:
+    branches: [main]
 
 permissions:
   contents: write
