--- a/.github/workflows/dracula-pulse.yml
+++ b/.github/workflows/dracula-pulse.yml
@@ -33,6 +33,7 @@ jobs:
           mkdir -p dist
           python3 scripts/gen_dracula_pulse.py
           python3 scripts/gen_dracula_pulse_mobile.py
+          python3 scripts/gen_dracula_pulse_LIGHTMODE.py
 
       - name: Publish pulse art
         uses: peaceiris/actions-gh-pages@v3
